# aliyun-mcp

./: .env.example  README.md  code_Architecture.md  pyproject.toml
src/aliyun_inventory_mcp/: __init__.py  http_server.py  server.py
